--- a/app/src/main/res/layout/inc_note_roll_info.xml
+++ b/app/src/main/res/layout/inc_note_roll_info.xml
@@ -4,76 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/item_note_roll">
 
-    <LinearLayout
-        android:id="@+id/info_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/item_content_between_space"
-        android:divider="@drawable/div_vertical_middle"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:showDividers="middle">
-
-        <TextView
-            android:id="@+id/progress_text"
-            style="@style/Text.Note.Info"
-            android:layout_width="wrap_content"
-            tools:text="@string/preview_note_done"
-            tools:visibility="visible" />
+    <merge>
 
         <LinearLayout
-            android:id="@+id/indicator_container"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:divider="@drawable/div_vertical_small"
+            android:id="@+id/info_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/item_content_between_space"
+            android:divider="@drawable/div_vertical_middle"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:gravity="center"
-            android:showDividers="middle"
-            tools:visibility="visible">
+            android:showDividers="middle">
 
-            <ImageView
-                android:id="@+id/visible_image"
-                style="@style/Image.Note.Info"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/ic_visible_exit"
+            <TextView
+                android:id="@+id/progress_text"
+                style="@style/Text.Note.Info"
+                android:layout_width="wrap_content"
+                tools:text="@string/preview_note_done"
                 tools:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/alarm_image"
-                style="@style/Image.Note.Info"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/ic_notifications"
-                tools:visibility="visible" />
+            <LinearLayout
+                android:id="@+id/indicator_container"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:divider="@drawable/div_vertical_small"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                tools:visibility="visible">
 
-            <ImageView
-                android:id="@+id/bind_image"
-                style="@style/Image.Note.Info"
-                android:importantForAccessibility="no"
-                android:src="@drawable/ic_bind_roll"
-                tools:visibility="visible" />
+                <ImageView
+                    android:id="@+id/visible_image"
+                    style="@style/Image.Note.Info"
+                    android:importantForAccessibility="no"
+                    app:srcCompat="@drawable/ic_visible_exit"
+                    tools:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/rank_image"
-                style="@style/Image.Note.Info"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/ic_rank"
-                tools:visibility="visible" />
+                <ImageView
+                    android:id="@+id/alarm_image"
+                    style="@style/Image.Note.Info"
+                    android:importantForAccessibility="no"
+                    app:srcCompat="@drawable/ic_notifications"
+                    tools:visibility="visible" />
+
+                <ImageView
+                    android:id="@+id/bind_image"
+                    style="@style/Image.Note.Info"
+                    android:importantForAccessibility="no"
+                    android:src="@drawable/ic_bind_roll"
+                    tools:visibility="visible" />
+
+                <ImageView
+                    android:id="@+id/rank_image"
+                    style="@style/Image.Note.Info"
+                    android:importantForAccessibility="no"
+                    app:srcCompat="@drawable/ic_rank"
+                    tools:visibility="visible" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/change_text"
+                style="@style/Text.Note.Info"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                tools:text="@string/preview_note_time" />
+
+            <TextView
+                android:id="@+id/create_text"
+                style="@style/Text.Note.Info"
+                android:layout_width="wrap_content"
+                tools:text="@string/preview_note_time" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/change_text"
-            style="@style/Text.Note.Info"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            tools:text="@string/preview_note_time" />
-
-        <TextView
-            android:id="@+id/create_text"
-            style="@style/Text.Note.Info"
-            android:layout_width="wrap_content"
-            tools:text="@string/preview_note_time" />
-
-    </LinearLayout>
+    </merge>
 
 </layout>
