--- a/app/src/main/res/layout/inc_info.xml
+++ b/app/src/main/res/layout/inc_info.xml
@@ -25,7 +25,7 @@
     <merge>
 
         <LinearLayout
-            android:id="@+id/parent_container"
+            android:id="@+id/info_page_container"
             style="@style/Container.Info">
 
             <ImageView
