--- a/app/src/main/res/layout/inc_info.xml
+++ b/app/src/main/res/layout/inc_info.xml
@@ -26,6 +26,8 @@
 
         <LinearLayout
             android:id="@+id/info_page_container"
+            android:visibility="gone"
+            tools:visibility="visible"
             style="@style/Container.Info">
 
             <ImageView
