--- a/app/src/main/res/layout/activity_develop_print.xml
+++ b/app/src/main/res/layout/activity_develop_print.xml
@@ -26,10 +26,8 @@
             <include
                 android:id="@+id/empty_info"
                 layout="@layout/inc_info"
-                android:visibility="gone"
                 app:details='@{R.string.info_print_empty_details}'
-                app:title='@{R.string.info_print_empty_title}'
-                tools:visibility="visible" />
+                app:title='@{R.string.info_print_empty_title}' />
 
             <!--  Make only progress visible on screen clean-open.  -->
             <ProgressBar
