--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -28,11 +28,9 @@
             <include
                 android:id="@+id/empty_info"
                 layout="@layout/inc_info"
-                android:visibility="gone"
                 app:details='@{R.string.info_bin_empty_details}'
                 app:icon='@{R.mipmap.img_info_bin}'
-                app:title='@{R.string.info_bin_empty_title}'
-                tools:visibility="visible" />
+                app:title='@{R.string.info_bin_empty_title}' />
 
             <!--  Make only progress visible on screen clean-open.  -->
             <ProgressBar
