--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -29,11 +29,9 @@
             <include
                 android:id="@+id/empty_info"
                 layout="@layout/inc_info"
-                android:visibility="gone"
                 app:details='@{R.string.info_rank_empty_details}'
                 app:icon='@{R.mipmap.img_info_rank}'
-                app:title='@{R.string.info_rank_empty_title}'
-                tools:visibility="visible" />
+                app:title='@{R.string.info_rank_empty_title}' />
 
             <!--  Make only progress visible on screen clean-open.  -->
             <ProgressBar
