--- a/app/src/main/res/layout/inc_note_roll_content.xml
+++ b/app/src/main/res/layout/inc_note_roll_content.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="@layout/item_note_roll">
+
+    <data>
+
+        <import type="sgtmelon.scriptum.infrastructure.model.annotation.TestViewTag" />
+    </data>
 
     <merge>
 
@@ -26,21 +32,25 @@
                 <include
                     android:id="@+id/first_row"
                     layout="@layout/inc_item_note_roll"
+                    app:tag='@{TestViewTag.ROLL_FIRST_ROW}'
                     tools:visibility="visible" />
 
                 <include
                     android:id="@+id/second_row"
                     layout="@layout/inc_item_note_roll"
+                    app:tag='@{TestViewTag.ROLL_SECOND_ROW}'
                     tools:visibility="visible" />
 
                 <include
                     android:id="@+id/third_row"
                     layout="@layout/inc_item_note_roll"
+                    app:tag='@{TestViewTag.ROLL_THIRD_ROW}'
                     tools:visibility="visible" />
 
                 <include
                     android:id="@+id/fourth_row"
                     layout="@layout/inc_item_note_roll"
+                    app:tag='@{TestViewTag.ROLL_FOURTH_ROW}'
                     tools:visibility="gone" />
 
             </LinearLayout>
